<resources>
    <string name="app_name">CompliantSystem MCQ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login_compliants">Sign in</string>
    <string name="prompt_email">CNIC xxxxx-xxxxxxx-x</string>
    <string name="prompt_email_error">Email error</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration">Registration</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="is_wasa_employee">Wasa Employee</string>
    <string name="cnin">CNIC</string>
    <string name="userName">Full Name</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="front_cnic_image">Front side image of CNIC(Click on the below icon) for verification</string>
    <string name="black_cnic_image">Back side image of CNIC (Click on the below icon) for verification</string>
    <string name="wasa_bill_image">Wasa bill image (Click on the below icon)</string>
    <string name="submit">Submit</string>
    <string name="update">submit update</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="address">address</string>
    <string name="error_username">Put username</string>
    <string name="error_password">please password length should greater than 8</string>
    <string name="empty_username">Put CNIC please</string>
    <string name="empty_password">Put password please</string>
    <string name="error_message_registration">Registration failed</string>
    <string name="error_cnic">Put cnic number please</string>
    <string name="error_mobile_number">put mobile number please</string>
    <string name="error_address">put address please</string>
    <string name="error_equal_password">Password didn\'t match</string>
    <string name="error_cnic_check">Please put correct format of cnic</string>
    <string name="error_upload_images">Upload image error</string>
    <string name="login_text">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emplyee_name">Are you wasa employee?</string>
    <string name="complain">Write a complain here</string>
    <string name="employee">WASA employee</string>
    <string name="not_employee">Not WASA employee</string>
    <string name="permanentlogin_name">username</string>
    <string name="permanentlogin_cnic">cnic</string>
    <string name="permanentlogin_id">id</string>
    <string name="need_registered">You have to register your self instead of login</string>
    <string name="user_email">Email address</string>
    <string name="gender">Please select your gender</string>
    <string name="compose_complain">Please put complain here</string>
    <string name="app_vendor_name">Complaint System</string>
    <string name="account">Account number</string>
    <string name="error_account">please put account number</string>
    <string name="error_account_syntax">Please follow this format: XXX-XXX-XXX</string>
    <string name="complain_body_error">You must put some text in this field</string>
    <string name="account_number">account_number</string>
    <string name="login_title">Loging in</string>
    <string name="registration_title">Register your credentails</string>
    <string name="login_message">please wait...</string>
    <string name="complains_title">Posting complains</string>
    <string name="allc_complains">All Complains</string>
    <string name="new_complains">New complains</string>
    <string name="pending_complains">Pending complains</string>
    <string name="resolved_complains">Resolved complains</string>
    <string name="employee_complains">Employee complains</string>
    <string name="complains_analytics">Complains analytics</string>
    <string name="complain_status">Complains status</string>
    <string name="COMPLAINS_RESOLVED">your complain is solved!</string>
    <string name="COMPLAINS_PENDING">Our team is going solve your problem</string>
    <string name="COMPLAINS_NEW">Its Very first step</string>
    <string name="complain_redirect">complains</string>
    <string name="EMPLOYEE_COMPLAINS" />
    <string name="large_text">All Complaints graph  :</string>
    <string name="description">Charts</string>
    <string name="complain_body">Complain\'s body:</string>
    <string name="complains_attachment">Complain\'s Attachment:</string>
    <string name="complains_forwarded_by">Complain\'s forward:</string>
    <string name="complains_status">Complains status:</string>
    <string name="designation_not_found">Designation not found</string>
    <string name="complains_id">complains_id</string>
    <string name="attatchement_type">Choose Attachement type</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="attach_evidence">Attach some evidence please</string>
    <string name="noteForInstruction">Note: 1. Please attach some evidence other wise your complain won\'t be submited. \n 2. Please don\'t upload irrelevant stuff regarded complain be specific to the problem. \n 3. Kindly, cast audio instead writing english in order to understand the complains. \n 4. Please attach last paid bill if you didn\'t have any evidence. </string>
    <string name="password_hint">Password</string>
    <string name="edit_and_submit">Edit Fields</string>
    <string name="please_wait">Please wait ...</string>
    <string name="detail_employee">DetailEmployee</string>
    <string name="revoke_message">The employee is not response in his suggested date</string>
    <string name="message_for_resolve">Resolve Message</string>
    <string name="filters">Apply filters</string>
    <string name="enable_locations">Kindly, enable locations please</string>
    <string name="allc_complains_object">all_single_complain</string>
    <string name="title_activity_maps">Map</string>
    <string name="gil_team">Build by GIL team</string>
    <string name="wifi_message">Please enable wifi or connect to the wifi or enable mobile data</string>
</resources>
