<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:id="@+id/container"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/topCardLayout"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/topRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="#A5E2FF">

            <ImageView
                android:id="@+id/imageTop"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/login"></ImageView>

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageTop"
                android:layout_centerHorizontal="true"

                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                android:text="@string/login_text"
                android:textColor="@color/white"
                android:textSize="25sp"></TextView>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_below="@+id/topCardLayout"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android" >
    <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       >
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:paddingLeft="10dp"
        android:maxLength="15"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:background="@drawable/layout_bg"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/layout_bg"
        android:hint="@string/prompt_password"
        android:paddingLeft="10dp"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:layout_below="@+id/username"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="30dp"
        android:paddingLeft="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="30dp"
        android:text="@string/forget_password"
        android:textSize="20sp"
        android:id="@+id/forgetPassword"
        android:textColor="@color/black"
        ></TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="30dp"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:paddingRight="30dp"
        android:text="@string/is_wasa_employee"
        android:textSize="20sp"
        android:id="@+id/isEmployee"
        android:textColor="@color/black"
        ></TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registration"
        android:layout_centerHorizontal="true"
        android:text="@string/registration"
        android:textSize="20sp"
        android:layout_below="@+id/forgetPassword"
        android:textColor="@color/black"
        ></TextView>


</RelativeLayout>
</ScrollView>
    <Button
        android:id="@+id/loginSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:enabled="true"
        android:textColor="@color/black"
        android:text="@string/action_sign_in"
        android:background="@drawable/layout_bg"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>

