<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:text="@string/attatchement_type"
        android:textSize="20sp"
        android:textColor="@color/black"
        ></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:padding="20dp"
            android:id="@+id/cameralayout"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/camera2"
                ></ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:padding="20dp"
            android:orientation="vertical"
            android:id="@+id/galleryLayout"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/gallery"
                ></ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery"></TextView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>