<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.registration.RegistrationCompliants">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/topImageLayout"
            >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            >
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/cloud_upload"
                android:layout_centerHorizontal="true"
                android:id="@+id/topImage"
                android:layout_centerVertical="true">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Registration"
                android:layout_below="@+id/topImage"
                android:layout_centerHorizontal="true"
                android:textSize="25sp"
                ></TextView>
        </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_below="@+id/topImageLayout"
            >
            <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="10dp"


            android:id="@+id/account"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="12"
                android:hint="@string/account" />
        </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:id="@+id/cnic"
                android:layout_below="@+id/account"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:maxLength="15"
                    android:layout_height="wrap_content"
                    android:hint="@string/cnin" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_below="@+id/cnic"
                android:id="@+id/userName"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userName" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_below="@+id/userName"
                android:id="@+id/userEmail"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_email" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_below="@+id/userEmail"
                android:id="@+id/mobileNumber"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobileNumber" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_below="@+id/mobileNumber"
                android:id="@+id/address"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:layout_below="@id/address"
                ></TextView>
           <Spinner
               android:layout_width="wrap_content"
               android:layout_alignParentRight="true"
               android:layout_height="wrap_content"
               android:layout_marginBottom="20dp"
               android:layout_marginLeft="10dp"
               android:layout_marginTop="10dp"
               android:id="@+id/spinnerGender"
               android:layout_below="@+id/address"
               ></Spinner>
            <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/address"
                android:layout_marginTop="60dp"
            android:id="@+id/password"

            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password" />
        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_below="@+id/password"
                android:id="@+id/confirmPassword"

                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_confirm_password" />
            </com.google.android.material.textfield.TextInputLayout>

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/front_cnic_image"-->
<!--                android:layout_margin="10dp"-->
<!--                android:id="@+id/textForFrontCnicImage"-->
<!--                android:layout_below="@+id/confirmPassword"></TextView>-->
<!--            <ImageView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="250dp"-->
<!--                android:id="@+id/cnicFrontImage"-->
<!--                android:src="@drawable/front_cnic"-->
<!--                android:layout_below="@+id/textForFrontCnicImage"></ImageView>-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/black_cnic_image"-->
<!--                android:layout_margin="10dp"-->
<!--                android:id="@+id/textForBackCnicImage"-->
<!--                android:layout_below="@+id/cnicFrontImage"></TextView>-->
<!--            <ImageView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="250dp"-->
<!--                android:id="@+id/cnicBackImage"-->
<!--                android:src="@drawable/back_cnic"-->
<!--                android:layout_below="@+id/textForBackCnicImage"></ImageView>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wasa_bill_image"
                android:layout_margin="10dp"
                android:id="@+id/textForWasaBillImage"
                android:layout_below="@+id/confirmPassword"></TextView>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/wasaBillImage"
                android:src="@drawable/wasa_bill"
                android:layout_below="@+id/textForWasaBillImage"></ImageView>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/submit"
                android:layout_below="@id/wasaBillImage"
                android:background="@drawable/rounded_button"
                android:textColor="@color/black"
                ></Button>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
