<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?android:attr/actionBarSize"

        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/front_cnic_image"
        android:id="@+id/CNICfront"
        android:textColor="@color/black"
        android:textSize="20sp"></TextView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/front_cnic"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/cnicFront"
        android:background="@drawable/layout_bg"
        ></ImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/black_cnic_image"
        android:id="@+id/CNICback"
        android:textColor="@color/black"
        android:textSize="20sp"></TextView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:id="@+id/cnicBack"
        android:src="@drawable/back_cnic"
        android:paddingRight="10dp"
        android:background="@drawable/layout_bg"
        ></ImageView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/submit"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="Email"
        android:text="@string/submit"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/layout_bg"
        ></Button>
</LinearLayout>
</ScrollView>